<resources>
    <string name="app_name">Blake49ersArticles</string>
    <string name="CSNBayAreaName">CSN Bay Area</string>
    <string name="CSNBayAreaHome">https://www.nbcsports.com</string>
    <string name="menu_read">Read</string>
    <string name="menu_not_read">Not Read</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_load_from_site">Reload From Site</string>
    <string name="menu_all">All</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_old">Delete Old Articles</string>
    <string name="menu_mark_all_read">Mark All Read</string>
    <string name="menu_mark_all_not_read">Mark All Not Read</string>
    <string name="pref_category_settings">Application Setting</string>
    <string name="pref_on_start_show">When application start, show articles that:</string>
    <string name="pref_on_start_get_new">When application start, get new articles</string>
    <string name="pref_sys_automatic_refresh">Sync Auto refresh</string>
    <string name="pref_category_delete">Delete Setting</string>
    <string name="pref_delete_message">Delete On Exist</string>
    <string name="pref_delete_by_read">Delete Read</string>
    <string name="pref_delete_by_days">Delete Articles by Days</string>
    <string name="pref_delete_by_week">Delete Articles 1 week old</string>
    <string name="pref_delete_by_2week">Delete Articles 2 weeks old</string>
    <string name="pref_load_twitter_link_key">pref_load_twitter_link_key</string>
    <string name="pref_load_twitter_link_title">Twitter Link</string>
    <string name="pref_load_twitter_link_link">https://www.ninersnation.com/2020/10/11/21511849/49ers-dolphins-4th-quarter-open-thread</string>
    <string-array name="settings_order_by">
        <item>Not Read</item>
        <item>Read</item>
        <item>Favorite</item>
        <item>All</item>
    </string-array>
    <string-array name="settings_order_by_values">
        <item>Not Read</item>
        <item>Read</item>
        <item>Favorite</item>
        <item>All</item>
    </string-array>
    <string-array name="settings_delete_by_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>