<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_not_read"
            android:checked="true"
            android:title="@string/menu_not_read" />

        <item
            android:id="@+id/menu_read"
            android:title="@string/menu_read" />

        <item
            android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/menu_all"
            android:title="@string/menu_all" />

    </group>

    <item
        android:id="@+id/menu_load_twitter"
        android:title="Load Twitter of 49ers" />
    <item
        android:id="@+id/menu_refresh_from_site"
        android:title="@string/menu_load_from_site" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />


</menu>